--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,12 @@ dependencies = [
     "unidic_lite",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "ruff",
+]
+
 [project.urls]
 Homepage = "https://github.com/kha-white/manga-ocr"
 
@@ -37,6 +43,10 @@ packages = ["manga_ocr"]
 
 [tool.setuptools.dynamic]
 version = {attr = "manga_ocr._version.__version__"}
+
+[tool.ruff]
+line-length = 120
+indent-width = 4
 
 [project.scripts]
 manga_ocr = "manga_ocr.__main__:main"
